feat: add send verification email
